# TypingPro

./: .env.example  .env.production  .gitignore  .stylelintignore  .stylelintrc.json  AUTH_FLOW.md  AUTH_SUCCESS.html  App.tsx  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONAL_COMMITS.md  DESKTOP_GUIDE.md  ELITE_COACHING_RELEASE.md  ENHANCEMENTS_SUMMARY.md  ONBOARDING.md  README.md  RELEASE.md  build_errors.txt  build_errors_v2.txt  build_errors_v3.txt  clean_build.sh  constants.ts  electron-main.cjs  fix_commas.py  index.css  index.html  index.tsx  latest.json  metadata.json  monkeytype_research_prompt.md  package-lock.json  package.json  preload.cjs  stylelint.config.cjs  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: fitness-ui-deploy.yml  glass-check.yml  release.yml  test.yml
apps/desktop/: .env.example  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.d.ts.map  vite.config.js  vite.config.js.map  vite.config.ts  zen.html
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/keys/: private.key  private.key.pub  private_v2.key  private_v2.key.pub
apps/desktop/src-tauri/src/: audio.rs  build_info.rs  database.rs  engine.rs  logger.rs  main.rs  oauth.rs  presence.rs  stats_commands.rs  telemetry.rs
apps/desktop/src-tauri/src/audio/: mod.rs
apps/desktop/src-tauri/src/commands/: zen.rs
apps/desktop/src-tauri/src/lib/: contrast.rs
apps/fitness-ui/: deploy.sh  package.json  tailwind.config.js  vite.config.js  vite.config.js.map  vite.config.ts
components/: AchievementsModal.tsx  DailyGoalsWidget.tsx  DailyQuestsWidget.tsx  ErrorBoundary.tsx  ErrorHeatmap.tsx  HandGuide.tsx  HandKeyboardAnimation.tsx  Header.tsx  HistoryModal.tsx  KeyboardHandsOverlay.tsx  LeaderboardModal.tsx  LessonDisplay.tsx  LessonVideoPlayer.tsx  MainLayout.tsx  OneVsOneChallenge.tsx  PerformanceOverlay.tsx  PremiumCustomization.tsx  SettingsModal.tsx  Sidebar.tsx  StatsBar.tsx  StatsDashboard.tsx  TutorialsModal.tsx  TypingArea.module.css  TypingArea.module.css.d.ts  TypingArea.tsx  TypingAreaOptimized.tsx  UserProfilesModal.tsx  VirtualKeyboard.tsx
components/analytics/: ActivityHeatmap.tsx  HeatmapOverlay.tsx  PerformanceCharts.tsx  PerformanceGraph.tsx
components/auth/: AuthModal.tsx  ConfigValidator.tsx  LoginPanel.tsx
components/curriculum/: InstructionalOverlay.tsx
components/gamification/: AIInsightCard.tsx  LevelProgress.tsx
components/layout/: AppShell.tsx  FuturisticBackground.tsx  TypingLayout.tsx  ZenHeader.tsx  ZenStats.tsx
components/stats/: GoalsPanel.tsx  HeatmapAnalyzer.tsx  StatsCard.tsx
components/training/: Metronome.tsx  ModeSelector.tsx
components/typing/: ComboMeter.tsx  FocusMode.tsx
constants/: codeSnippets.ts  curriculum.ts  dictionaries.ts  themes.ts
contexts/: AppContext.tsx  SoundContext.tsx  ThemeContext.tsx
docs/: auth-google.md
hooks/: useOAuthConfig.ts  useSystemHealth.ts
pages/: TypingPage.tsx
scripts/: analyze_color.py  build-desktop.cjs  build-release.cjs  bump-version.cjs  bump-version.js  check-env.cjs  check-requirements.cjs  compress-videos.cjs  force-sync.js  open-app-debug.sh  optimize-videos.cjs  organize-artifacts.js  release-flow.js  release.js  set-version.js  ship.js  sync-tauri-version.cjs  sync-version.js  verify-glass.js  verify-glass.ts
services/: SoundManager.ts  audioService.ts  authService.ts  drillService.ts  firebase.ts  geminiService.ts  storageService.ts
src/: App.tsx  env.d.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  engine.rs  main.rs
src/components/: AccountAvatar.tsx  Achievements.tsx  AnalyticsDashboard.css  AnalyticsDashboard.tsx  AuthButtonGithub.tsx  AuthButtonGoogle.tsx  AuthButtons.tsx  CurriculumSelector.css  CurriculumSelector.tsx  ErrorBoundary.tsx  FingerGuide.css  FingerGuide.tsx  FingerGuideOverlay.css  FingerGuideOverlay.tsx  GatekeeperModal.css  GatekeeperModal.tsx  HandGuide.css  HandGuide.tsx  HeatMap.tsx  KeyHeatmap.tsx  KeyboardOverlay.css  KeyboardOverlay.tsx  Leaderboard.tsx  LessonBank.tsx  LessonEngine.css  LessonEngine.tsx  LessonSelector.tsx  LoginModal.css  LoginModal.tsx  LoginPanel.tsx  MissionHUD.tsx  NetworkTest.tsx  ProgressDashboard.css  ProgressDashboard.tsx  ProgressTracker.css  ProgressTracker.tsx  RankBadge.css  RankBadge.tsx  RealTimeGraph.tsx  SessionTable.tsx  (+19 more)
src/context/: GameContext.tsx
theme/: themes.ts
utils/: ConfigLoader.ts  appVersion.ts  env.ts  keyToFingerMap.ts  keyboardMaps.ts
(+345 files in other folders)
