[package]
name = "typingpro-desktop"
version = "0.1.1"
description = "TypingPro Desktop Application"
authors = ["TypingPro Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["devtools"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-deep-link = "2.0.0"
tauri-plugin-oauth = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
open = "5.3"
async-channel = "2.3.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
