[package]
name = "typingpro-desktop"
version = "0.1.1"
description = "TypingPro Desktop Application"
authors = ["TypingPro Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api", "devtools"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-deep-link = "2.0.0"
tauri-plugin-oauth = "2.0.0"
tauri-plugin-updater = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
open = "5.3"
async-channel = "2.3.1"
tauri-plugin-fs = "2.4.4"
window-vibrancy = "0.7.1"
log = "0.4.29"
simplelog = "0.12.2"
tauri-plugin-store = "2.0.0-rc.0"
tauri-plugin-global-shortcut = "2.0.0-rc.0"
rodio = "0.17"
lazy_static = "1.4"
discord-presence = "0.4"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
